--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "redis": "^3.0.2",
+    "redis-lock": "^0.1.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   }
