--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.14.3",
     "redis": "^3.0.2",
     "redis-lock": "^0.1.4",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "wowjs": "^1.1.3"
   }
 }
