--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:prod": "webpack -p",
-    "start": "node server.js",
+    "start": "npm run build && node server.js",
     "dev": "webpack-dev-server"
   },
   "repository": {
